apps/applications/tools/excalidraw/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw-route
  namespace: default
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "excalidraw.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
